--- a/test.html
+++ b/test.html
@@ -5,16 +5,28 @@
                  .body{text-align: center;}
            </style>
             <script>
-              var t = 0;
+             var t = 0;
              function Click(){
                 t += 1;
                 document.getElementById("Onclick").innerHTML = "点击次数:" + t;
              }
-            </script>
+           </script>
+           <script>
+               function Message(message){
+                   arft(message);
+               }
+           </script>
      </head>
     <body class="body">
-          <input type="button" value="签到" onclick="Click()"/>
+          <div>
+             <input type="button" value="签到" onclick="Click()"/>
+             <br>
+             <h3 id="Onclick">点击人数:</h3>
+          </div>
           <br>
-          <h3 id="Onclick">点击人数:</h3>
+          <div>
+             <input id="tb1" type="textbox" value="点击输入" />
+             <input type="button" value="弹出" onClick="Message(tb1)">
+          </div>
     </body>
 </html>
