--- a/test.html
+++ b/test.html
@@ -13,7 +13,7 @@
            </script>
            <script>
                function Message(message){
-                   arft(message);
+                   alert(message);
                }
            </script>
      </head>
