--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
                window.location.assign("https://xiaobairuanjian.xyz/click.html")
            }
         }
-    <script/>
+    </script>
     <h1>Hello!</h1>
      <br>
      <button><a href="test.html">签到</a></button>
-     <br/>
+     <br>
      <input type="button" value="如果我们认识请输入密码后点这里" onclick="Check(document.getElementById("pass").value)"/>
-     <br/>
+     <br>
      <p>密码输入框:</p>
-     <br/>
+     <br>
      <textbox id="pass">
   </body>
 </html>
