--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
      <br>
      <button><a href="test.html">签到</a></button>
      <br>
-     <input type="button" value="如果我们认识请输入密码后点这里" onclick="Check(document.getElementById("pass").value)"/>
+     <input type="button" value="如果我们认识请输入密码后点这里" onclick="Check(document.getElementById('pass').value)"/>
      <br>
      <p>密码输入框:</p>
      <br>
