--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script>
         function Check(password){
            if(password == "123456789"){
-               window.location.assign("https://xiaobairuanjian.xyz/click.html");
+               window.location.assign("https://www.xiaobairuanjian.xyz/click.html");
            }
            else{
                alert("密码错误咯");
