--- a/index.html
+++ b/index.html
@@ -26,5 +26,10 @@
      <p>密码输入框:</p>
      <br>
      <input type="text" id="pass" />
+     <br>
+     <br>
+     <p>如果你是来下载我的【歌曲删除工具】的,请点下面的按钮。</p>
+     <br>
+     <input type="button" value="下载" onClick="window.location.assign('https://www.xiaobairuanjian.xyz/歌曲删除工具.zip');" />
   </body>
 </html>
