--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
      <input type="text" id="pass" />
      <br>
      <br>
-     <p>如果你是来下载我的【歌曲删除工具】的,请点下面的按钮。</p>
+     <p>如果你是来下载我的【歌曲删除工具】的,请点下面的按钮(文件已压缩,速度慢请谅解,服务器在美国。)</p>
      <br>
      <input type="button" value="下载" onClick="window.location.assign('https://www.xiaobairuanjian.xyz/歌曲删除工具.zip');" />
   </body>
