--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
            }
         }
     </script>
-    <h1>Hello!</h1>
+    <h1>你好,如果您是来查看代码的,就可以离开了,因为这个git库毫无意义,谢谢合作。</h1>
+     <br>
+     <h1>Hello, if you are here to view the code, you can leave here because this git library is meaningless, thank you for your cooperation.</h1>
      <br>
      <button><a href="test.html">签到</a></button>
      <br>
